--- a/package.json
+++ b/package.json
@@ -6,16 +6,22 @@
   "scripts": {
     "start": "npm run build:live",
     "build": "tsc -p .",
-    "build:live": "nodemon --watch 'server/**/*.ts' --exec \"ts-node\" server/app.ts"
+    "build:live": "nodemon --watch 'server/**/*.ts' --exec \"ts-node\" server/app.ts",
+    "client": "parcel watch client/index.html -d build --no-hmr",
+    "build:client": "parcel build client/index.html -d build"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "browserslist": [
+    "since 2017-06"
+  ],
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/mongoose": "^5.10.3",
     "@types/node": "^14.14.22",
     "nodemon": "^2.0.7",
+    "parcel-bundler": "^1.12.5",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
@@ -23,6 +29,9 @@
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.11.13"
+    "mongoose": "^5.11.13",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.2.0"
   }
 }
